fix(client): prevent controls overlapping media links

--- a/client/style.css
+++ b/client/style.css
@@ -14,3 +14,7 @@
 #cast:hover {
   cursor: pointer
 }
+
+body {
+  padding-bottom: 50px;
+}
